# library-system

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run-celery-beat.sh  run-celery.sh  run.sh
library_system/library_system/: celery.py  settings.py  urls.py
library_system/users/: models.py  serializers.py  urls.py  views.py
library_system/users/migrations/: 0001_initial.py  0002_alter_user_managers_user_groups_user_is_superuser_and_more.py
